// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: linux 1`] = `
<Fragment>
  <DotNetPrereqsScanner />
  <li
    className="abs-width-600"
  >
    <SentenceWithFilename
      filename="Jenkinsfile"
      translationKey="onboarding.tutorial.with.jenkins.jenkinsfile.jenkinsfile_step"
    />
    <CodeSnippet
      snippet="node {
  stage('SCM') {
    checkout scm
  }
  stage('SonarQube Analysis') {
    def scannerHome = tool 'SonarScanner for MSBuild'
    withSonarQubeEnv() {
      sh "dotnet \${scannerHome}/SonarScanner.MSBuild.dll begin /k:\\"my-project\\""
      sh "dotnet build"
      sh "dotnet \${scannerHome}/SonarScanner.MSBuild.dll end"
    }
  }
}
"
    />
  </li>
</Fragment>
`;

exports[`should render correctly: win 1`] = `
<Fragment>
  <DotNetPrereqsScanner />
  <li
    className="abs-width-600"
  >
    <SentenceWithFilename
      filename="Jenkinsfile"
      translationKey="onboarding.tutorial.with.jenkins.jenkinsfile.jenkinsfile_step"
    />
    <CodeSnippet
      snippet="node {
  stage('SCM') {
    checkout scm
  }
  stage('SonarQube Analysis') {
    def scannerHome = tool 'SonarScanner for MSBuild'
    withSonarQubeEnv() {
      bat "dotnet \${scannerHome}\\\\SonarScanner.MSBuild.dll begin /k:\\"my-project\\""
      bat "dotnet build"
      bat "dotnet \${scannerHome}\\\\SonarScanner.MSBuild.dll end"
    }
  }
}
"
    />
  </li>
</Fragment>
`;
